--- a/en_GB.yml
+++ b/en_GB.yml
@@ -15,7 +15,7 @@ PlayerRankUp: '&a%s has been successfully ranked up to %s.'
 UserRankUp: '&aYou have been successfully ranked up to %s.'
 PlayerRankDown: '&a%s has been successfully ranked down to %s.'
 UserRankDown: '&aYou have been successfully ranked down to %s.'
-LackOfFunds: '&cYou do not have enough funds.'
+Funds: '&cYou need %s to rank up!'
 UserMaximumRank: '&cYou are the maximum rank, you cannot rank up.'
 UserMinimumRank: '&cYou are the minimum rank, you cannot rank down.'
 PlayerMaximumRank: '&c%s is the maximum rank, they cannot rank up.'
