Language file formatting
Improved and added formatting to existing language file entries.

--- a/en_GB.yml
+++ b/en_GB.yml
@@ -1,27 +1,27 @@
-NoPermissionsError: '&cYou do not have permission to do that.'
-NoRanksSetup: '&cNo ranks have been setup by your administrator.'
+NoPermissionsError: '&4Error&8: &cYou do not have permission to do that.'
+NoRanksSetup: '&4Error&8: &cNo ranks have been setup by your administrator.'
 RanksListTitle: '&aRanks&2:'
 RanksListLine: '&f%d. &7%s'
-RankNotFound: '&cRank not found, try a rank that does exist.'
-NoRankDescription: '&cSorry, no description has been set for this rank.'
-ConsoleIsNotAPlayer: '&cConsole doesn''t have a rank because it''s not a player.'
-PlayerHasNoRank: '&c%s''s does not have a rank.'
-UserHasNoRank: '&cYou do not have a rank.'
+RankNotFound: '&4Error&8: &cRank not found, try a rank that does exist.'
+NoRankDescription: '&4Error&8: &cSorry, no description has been set for this rank.'
+ConsoleIsNotAPlayer: '&4Error&8: &cConsole doesn''t have a rank because it''s not a player.'
+PlayerHasNoRank: '&4Error&8: &c%s''s does not have a rank.'
+UserHasNoRank: '&4Error&8: &cYou do not have a rank.'
 CurrentUserRank: '&fYour current rank is: &7%s'
-PlayerHasNoRank: '&c%s does not have a rank.'
+PlayerHasNoRank: '&4Error&8: &c%s does not have a rank.'
 CurrentPlayerRank: '&f%s''s current rank is: &7%s'
-PlayerNotFound: '&cThat player doesn''t exist or is offline.'
+PlayerNotFound: '&4Error&8: &cThat player doesn''t exist or is offline.'
 PlayerRankUp: '&a%s has been successfully ranked up to %s.'
 UserRankUp: '&aYou have been successfully ranked up to %s.'
 PlayerRankDown: '&a%s has been successfully ranked down to %s.'
 UserRankDown: '&aYou have been successfully ranked down to %s.'
-Funds: '&cYou need %s to rank up!'
+Funds: '&cYou need &7%s&c to rank up!'
 UserMaximumRank: '&cYou are the maximum rank, you cannot rank up.'
 UserMinimumRank: '&cYou are the minimum rank, you cannot rank down.'
-PlayerMaximumRank: '&c%s is the maximum rank, they cannot rank up.'
-PlayerMinimumRank: '&c%s is the minimum rank, they cannot rank down.'
-ReloadMessage: '&fGameRanks has reloaded its configuration.'
-CommandNotFound: '&cCommand not found.'
+PlayerMaximumRank: '&4Error&8: &c%s is the maximum rank, they cannot rank up.'
+PlayerMinimumRank: '&4Error&8: &c%s is the minimum rank, they cannot rank down.'
+ReloadMessage: '&aDone&8: &3GameRanks &7has reloaded its configuration.'
+CommandNotFound: '&4Error&8: &cCommand not found.'
 HelpHeader: '&a&l======&2 Help &a&l======'
 HelpLine: '&f/%s &7%s'
 HelpFooter: '&a&l================'
