Added file header
Added header indicating what file this is. Added comment on config version tag that it shouldn't be changed.

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,5 @@
-# Config version
+# -- GameRanks general configuration --
+# Config version - please don't change this, bad things could happen.
 version: 0.1
 # Language file
 lang: en_GB
