--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: ${project.version}-b${BUILD_NUMBER}
 description: Allows uses to rank up and down using currency gaining permissions or other attributes.
 
 author: J4D3N
-authors: []
+authors: [Tsuser1]
 website: http://www.voidpowered.io/
 
 main: io.voidpowered.gameranks.GameRanks
