--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -30,6 +30,11 @@ commands:
     description: Purchases next rank up using your balance.
     aliases: [grrankup]
     usage: /rankup [player]
+  setrank:
+    description: Allows admins to set other players ranks.
+    aliases: [grsetrank]
+    usage: /setrank <rank> [player]
+    permission: gameranks.commands.setrank
   gameranks:
     description: Displays help, version and allows administrators to reload configuration.
     aliases: [gr]
@@ -44,11 +49,15 @@ permissions:
   gameranks.commands.*:
     description: Allows access to all GameRanks commands.
     children:
+      gameranks.commands.setrank: true
       gameranks.commands.ranks: true
       gameranks.commands.rank.others: true
       gameranks.commands.rankup.others: true
       gameranks.commands.rankdown.others: true
       gameranks.commands.gameranks.*: true
+  gameranks.commands.setrank:
+    description: Allows you to set player ranks.
+    default: op
   gameranks.commands.ranks:
     description: Allows you to see all available ranks.
     default: true
