Included new permissions for 1.1.1 release
Add permissions to gameranks.* entry for 1.1.1 release

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -46,6 +46,8 @@ permissions:
     description: Allows access to all GameRanks features.
     children:
       gameranks.commands.*: true
+      gameranks.rankup.*: true
+      gameranks.rankdown.*: true
   gameranks.commands.*:
     description: Allows access to all GameRanks commands.
     children:
