Grammar/format updates

--- a/src/main/resources/en_GB.yml
+++ b/src/main/resources/en_GB.yml
@@ -7,15 +7,15 @@ NoRankDescription: '&4Error&8: &cSorry, no description has been set for this ran
 ConsoleIsNotAPlayer: '&4Error&8: &cConsole doesn''t have a rank because it''s not a player.'
 PlayerHasNoRank: '&4Error&8: &c%s''s does not have a rank.'
 UserHasNoRank: '&4Error&8: &cYou do not have a rank.'
-CurrentUserRank: '&fYour current rank is: &7%s'
+CurrentUserRank: '&3Your current rank is&8: &7%s'
 PlayerHasNoRank: '&4Error&8: &c%s does not have a rank.'
-CurrentPlayerRank: '&f%s''s current rank is: &7%s'
+CurrentPlayerRank: '&7%s&3''s current rank is&8: &7%s'
 PlayerNotFound: '&4Error&8: &cThat player doesn''t exist or is offline.'
 PlayerRankUp: '&a%s has been successfully ranked up to %s.'
 UserRankUp: '&aYou have been successfully ranked up to %s.'
 PlayerRankDown: '&a%s has been successfully ranked down to %s.'
 UserRankDown: '&aYou have been successfully ranked down to %s.'
-Funds: '&cYou need &7%s&c to rank up!'
+Funds: '&cYou need &7%s&c more to rank up!'
 UserMaximumRank: '&cYou are the maximum rank, you cannot rank up.'
 UserMinimumRank: '&cYou are the minimum rank, you cannot rank down.'
 PlayerMaximumRank: '&4Error&8: &c%s is the maximum rank, they cannot rank up.'
