Added cooldown system to /rankup and /rankdown

--- a/src/main/resources/en_GB.yml
+++ b/src/main/resources/en_GB.yml
@@ -25,3 +25,4 @@ CommandNotFound: '&4Error&8: &cCommand not found.'
 HelpHeader: '&a&l======&2 Help &a&l======'
 HelpLine: '&f/%s &7%s'
 HelpFooter: '&a&l================'
+PlayerInCooldown: '&4Error&8: &cToo fast! Wait a second and try again.'
