Added update notifications

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,6 +3,10 @@
 version: 0.1
 # Language file
 lang: en_GB
+# Release type - Don't change this unless you know what it does.
+release-type: PUB
+# Enable/disable update notifications
+update-notify: true
 # Use per-rank permissions
 rankPermissions: false
 # Cooldowns - Time is in seconds, decimals allowed. (1.5 = one and a half seconds)
